gke_ingress_lb/fe-srv-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fe-srv-ingress
  labels:
    type: fe-srv
  annotations:
    cloud.google.com/app-protocols: '{"fe":"HTTP2"}'
    cloud.google.com/neg: '{"ingress": true, "exposed_ports": {"50051":{}}}'
    cloud.google.com/backend-config: '{"default": "fe-grpc-backendconfig"}'
spec:
  type: ClusterIP 
  ports:
  - name: fe
    port: 50051
    protocol: TCP
    targetPort: 50051
  selector:
    app: fe
