gke_ingress_lb/fe-srv-lb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fe-srv-lb
  labels:
    type: fe-srv
  annotations:
    cloud.google.com/app-protocols: '{"fe":"HTTP2"}'
spec:
  type: LoadBalancer  
  ports:
  - name: fe
    port: 50051
    protocol: TCP
    targetPort: 50051
  selector:
    app: fe
