gke_ingress_lb/fe-ilb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe-ilb-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: "gce-internal"    
spec:
  tls:
  - secretName: fe-secret
  rules:
  - host: "grpc.domain.com"
    http:
      paths:
      - path: "/echo.EchoServer/*"
        pathType: ImplementationSpecific
        backend:
          service:
            name: fe-srv-ingress
            port:
              number: 50051
