gke_ingress_lb/fe-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fe-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "false"   
spec:
  tls:
  - hosts:
    - server.domain.com
    secretName: fe-secret
  backend:
    serviceName: fe-srv-ingress
    servicePort: 50051
